--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 #pointer_overlay{
     position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    left: 50;
+    right: 50;
+    top: 50;
+    bottom: 50;
     /* background-color: rgba(255, 0, 0, 0.5); */
 }
 
 #debug{
-
-    
+    display: none;
     position: absolute;
     width: 100px;
     height: 100px;
