--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,4 @@
-#pointer_overlay{
-    position: absolute;
-    left: 50;
-    right: 50;
-    top: 50;
-    bottom: 50;
-    /* background-color: rgba(255, 0, 0, 0.5); */
-}
-
-#debug{
+#debug {
     display: none;
     position: absolute;
     width: 100px;
@@ -15,4 +6,17 @@
     left: 0;
     top: 0;
     background-color: rgba(255, 0, 0, 0.5);
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.map {
+    width: 100%;
+    height: 100%;
 }
