--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,38 @@
-#debug {
-    display: none;
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    left: 0;
-    top: 0;
-    background-color: rgba(255, 0, 0, 0.5);
-}
-
-html,
-body {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.map {
-    width: 100%;
-    height: 100%;
-}
+    #debug {
+        display: none;
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        left: 0;
+        top: 0;
+        background-color: rgba(255, 0, 0, 0.5);
+    }
+    
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    
+    .map {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .ol-control button img {
+        width: 25px;
+        height: 25px;
+    }
+    
+    .follow-control {
+        top: .5em;
+        right: .5em;
+    }
+    
+    .follow-control.on {
+        background-color: green;
+    }
+    
+    .follow-control.off {}
