--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
         top: 0;
         background-color: rgba(255, 0, 0, 0.5);
     }
-    
+
     html,
     body {
         width: 100%;
@@ -15,24 +15,29 @@
         padding: 0;
         margin: 0;
     }
-    
+
     .map {
         width: 100%;
         height: 100%;
     }
-    
+
     .ol-control button img {
         width: 25px;
         height: 25px;
     }
-    
+
     .follow-control {
-        top: .5em;
+        top: 10px;
         right: .5em;
     }
-    
+
     .follow-control.on {
-        background-color: green;
+        background-color: #639684;
     }
-    
+
     .follow-control.off {}
+
+    .refresh-control {
+        top: 60px;
+        right: .5em;
+    }
