--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,24 @@
         width: 100%;
         height: 100%;
     }
+    
+    .ol-control button {
+    	background: gray;
+    	cursor: pointer;
+    	border: 5px solid gray;
+    	width: 45px;
+    	height: 45px;
+    	transition: transform .4s;
+    }
+    
+    .ol-control button:hover {
+    	transform: scale(1.5);
+    }
 
     .ol-control button img {
-        width: 25px;
-        height: 25px;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .follow-control {
