--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,23 @@
         height: 100%;
     }
 
+    .ol-control button {
+    	background: gray;
+    	cursor: pointer;
+    	border: 5px solid gray;
+    	width: 45px;
+    	height: 45px;
+    	transition: transform .4s;
+    }
+    
+    .ol-control button:hover {
+    	transform: scale(1.5);
+    }
+
     .ol-control button img {
-        width: 25px;
-        height: 25px;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .follow-control {
@@ -31,8 +45,9 @@
         right: .5em;
     }
 
-    .follow-control.on {
+    .follow-control.on button {
         background-color: #639684;
+        border-color: #639684;
     }
 
     .follow-control.off {}
@@ -40,4 +55,9 @@
     .refresh-control {
         top: 60px;
         right: .5em;
+    }
+
+    .refresh-control button:active {
+        background-color: #639684;
+        border-color: #639684;
     }
